package vn.huuchuong.pabackbyhuuchuong.repository;

import org.springframework.data.jpa.repository.JpaRepository;
import vn.huuchuong.pabackbyhuuchuong.entity.RefreshToken;

import java.util.Optional;

public interface RefreshTokenRepository extends JpaRepository<RefreshToken, Long> {

    Optional<RefreshToken> findByToken(String token);

    void deleteByUsername(String username);
    void deleteByUsernameAndUserAgent(String username, String userAgent);

}
