package vn.huuchuong.pabackbyhuuchuong.service.impl;

import lombok.RequiredArgsConstructor;
import org.springframework.stereotype.Service;
import vn.huuchuong.pabackbyhuuchuong.service.ProductVariantService;

@Service
@RequiredArgsConstructor
public class ProductVariantImpl implements ProductVariantService {
}
